# codes

./: ReadME.md
Assembly/: 01-meter.asm  01.asm  02-sum.asm  02.asm  03-hello.asm  readme.md
C#/: Readme.md
C#/Algorithms/: Algorithms.csproj  Algorithms.sln  Program.cs  Readme.md  packages.config
C#/Algorithms/Backtrack/: NQueen.cs
C#/Algorithms/DP/: BST.cs  Fibonacci.cs
C#/Algorithms/Generics/: DbContext.cs  Terminal.cs
C#/C#-WinForm-Image_SQL_Docker/: DbLab2.csproj  DbLab2_TemporaryKey.pfx  Form1.Designer.cs  Form1.cs  Program.cs
C#/WebAPI-minimal-ASP.Net Core In-Memory Database/: ToDoDb.cs  WebAPIMS.http  WebAPIMS.sln
C++/: 01-hello.cpp  02-fib.cpp  03-template.cpp  04-sorting.cpp
C++/log/: 01.txt  02.txt  03.txt  04.txt  readme.md
Go/: 01-hello.go  readme.md
Javascript/: 01-hello.js
Python/: 01-hello.py  02-fibo.py
Rust/: 01-get-string.rs  03-loop.rs  readme.md
Rust/Examples/: 01-hello.rs  04-thread.rs  05-async-programming.rs  06-request.rs  07-random-number.rs
Rust/Software-Engineering/: Readme.md
Rust/Software-Engineering/CleanArchitectureWithMVC/: Cargo.toml
Rust/Software-Engineering/CleanArchitectureWithMVC/src/: main.rs
Rust/Software-Engineering/CleanArchitectureWithMVC/src/Application/: services.rs
Rust/Software-Engineering/CleanArchitectureWithMVC/src/Domain/: models.rs
Rust/Software-Engineering/CleanArchitectureWithMVC/src/Infrastructure/: db.rs  mod.rs
Rust/Software-Engineering/CleanArchitectureWithMVC/src/Presentation/: controllers.rs  views.rs
SQL/: Readme.md  Store Images and User.sql  University-v1.sql
(+307 files in other folders)
