[package]
name = "CleanArchitectureWithMVC"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
actix-web = "4.0"
diesel = { version = "2.0", features = ["r2d2", "postgres"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }